--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <img src="./assets/webpack-sprite.png" alt="Webpack logo" width="250px">
-
+    <a href="nosotros.html">Ir a nosotros</a>
     <!-- Este es un comentario en HTML -->
     <!-- Este es un comentario en HTML -->
     <!-- Este es un comentario en HTML -->
